# ChangeLog for media-libs/libafterimage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libafterimage/ChangeLog,v 1.27 2009/10/28 21:29:04 bicatali Exp $

  28 Oct 2009; Sébastien Fabbro <bicatali@gentoo.org>
  libafterimage-1.18-r1.ebuild:
  Added xextproto as build dependency (bug #290673). Switched to EAPI=2

  04 Apr 2009; Markus Meier <maekke@gentoo.org>
  -files/libafterimage-1.15-examples.patch,
  -files/libafterimage-examples.patch, -libafterimage-1.07.ebuild,
  -libafterimage-1.15.ebuild, -libafterimage-1.18.ebuild:
  old

  25 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  libafterimage-1.18-r1.ebuild:
  ia64/sparc stable wrt #262418

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> libafterimage-1.18-r1.ebuild:
  Stable for HPPA (bug #262418).

  18 Mar 2009; Brent Baude <ranger@gentoo.org> libafterimage-1.18-r1.ebuild:
  stable ppc, bug 262418

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  libafterimage-1.18-r1.ebuild:
  Stable on alpha, bug #262418

  15 Mar 2009; Brent Baude <ranger@gentoo.org> libafterimage-1.18-r1.ebuild:
  stable ppc64, bug 262418

  14 Mar 2009; Markus Meier <maekke@gentoo.org>
  libafterimage-1.18-r1.ebuild:
  amd64/x86 stable, bug #262418

*libafterimage-1.18-r1 (17 Jan 2009)

  17 Jan 2009; Markus Meier <maekke@gentoo.org>
  +files/libafterimage-1.18-glx.patch, +libafterimage-1.18-r1.ebuild:
  fix x11-terms/rxvt-unicode segfault by Martin von Gagern in bug #252651;
  don't use internal copy of libungif wrt bug #252917

  13 Dec 2008; Alexis Ballier <aballier@gentoo.org>
  +files/libafterimage-1.18-recmake_bsd.patch, libafterimage-1.18.ebuild:
  fix build on fbsd and keyword it x86-fbsd, bug #210965

*libafterimage-1.18 (04 Jul 2008)

  04 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +libafterimage-1.18.ebuild:
  Version bump

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> libafterimage-1.15.ebuild:
  ia64/sparc stable wrt #215898
