@@ -5,5 +5,5 @@ AUX libafterimage-config.patch 369 RMD160 e209d20413373694cd4b4cf16cc1927fbb8437
 AUX libafterimage-makefile.in.patch 2168 RMD160 4b6340f3845774de82fb612de0e94f0841ae869a SHA1 f707ad8a850eafacdac780a727f936b8cf8673de SHA256 44b2f80b7e5f9bef3852d179e247592f3d5a0983de105082d1b5d1667eb4ced8
 DIST libAfterImage-1.18.tar.bz2 1050328 RMD160 dcf921660e15bb31908c90fcfe00b58d58754fc3 SHA1 d177c63067f5d0053e02f92879fe59764e421f25 SHA256 f1562240f1dd3a180e07436ee28a993a707654a339d997ad0512692d3fc32312
 EBUILD libafterimage-1.18-r1.ebuild 2031 RMD160 7803dbdd5467665bdfed4c6fbb1a1cfdc10485c8 SHA1 65ee574b321facb0c58bb9cfb49821c500cf3e1a SHA256 a5da075fd33b091dc4a253fcaa52349480cc7d1411663bfdb561b636dddf667d
-MISC ChangeLog 3929 RMD160 9efb035752cf7ef743e0f6c2497432954dcc9b15 SHA1 9bac96eff2eb4e1bd092ca71eadef9b80479969c SHA256 abe2519f91676dda8379e43283124c79894038da19943e6ddaa4f695a5903f5e
-MISC metadata.xml 895 RMD160 3a9671c21f649729ea596def4c2ecd7c313bf5b3 SHA1 434cfd341defa95b295978f8de809be03a762443 SHA256 95d257cc2a6f6846269d1c64750669c837712f2d341c886581a8a89422e591cd
+MISC ChangeLog 4024 RMD160 b90465b4899e16c8f82b4b89f24df18c39eb7314 SHA1 efbc22e78f3dc188b20f56145424abae98160061 SHA256 5d2d4a8819478876b2a1bc8dcdab24ebeb5b12d161cb8325a4586c211dd41dac
+MISC metadata.xml 803 RMD160 5a20a7d1e910ee66f7bb5fd53aad8341a1f0b653 SHA1 bfee50707db93a6a62978caf711b15be6446c67c SHA256 5f1fc597d0da18541c30e568f47ec9d1937f277dc34130101e8e605924a4d444
