@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libafterimage
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libafterimage/ChangeLog,v 1.27 2009/10/28 21:29:04 bicatali Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libafterimage/ChangeLog,v 1.28 2010/04/14 13:01:23 voyageur Exp $
+
+  14 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org> metadata.xml:
+  Move to afterstep herd
 
   28 Oct 2009; Sébastien Fabbro <bicatali@gentoo.org>
   libafterimage-1.18-r1.ebuild:
